# qwenasr-inference

./: .dockerignore  Dockerfile  NOTICE  README.md  cog.yaml  docker-compose.yml  predict.py  pyproject.toml
.github/workflows/: python.yml
app/: config.py  engine.py  main.py  routes.py  schemas.py  transcribe.py
app/providers/: replicate.py
deploy/huggingface/: handler.py  requirements.txt
deploy/modal/: serve.py
deploy/runpod/: Dockerfile  handler.py
scripts/: download_weights.py
tests/: conftest.py
tests/integration/: test_inference.py
tests/unit/: test_align.py  test_health.py  test_transcribe.py
