[project]
name = "qwenasr-inference"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.134.0",
    "qwen-asr>=0.0.6",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "poethepoet>=0.42.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.poe.tasks]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000 --log-level debug"
serve = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test-unit = "pytest tests/unit -v"
test-integration = "pytest tests/integration -v"
test = ["test-unit", "test-integration"]
